Updated the team page.

--- a/team-details.html
+++ b/team-details.html
@@ -350,7 +350,7 @@
                     "name": "Olga",
                     "surname": "Martsenyuk",
                     "position": "PhD, Scientific Researcher",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "o.p.martsenyuk@imbg.org.ua",
                     "linkedin": "",
@@ -362,7 +362,7 @@
                     "name": "Ruslan",
                     "surname": "Rodriguez",
                     "position": "Junior Scientific Researcher",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "m.obolenska@gmail.com",
                     "linkedin": "",
@@ -385,7 +385,7 @@
                     "name": "Alina",
                     "surname": "Frolova",
                     "position": "Junior Scientific Researcher",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "a.o.frolova@imbg.org.ua",
                     "linkedin": "",
@@ -397,7 +397,7 @@
                     "name": "Maria",
                     "surname": "Chabanova",
                     "position": "Technician",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "",
                     "linkedin": "",
@@ -411,7 +411,7 @@
                     "name": "Olexandr",
                     "surname": "Lykhenko",
                     "position": "MSc",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "lykhenko.olexandr@gmail.com",
                     "linkedin": "",
@@ -423,7 +423,7 @@
                     "name": "Serhiy",
                     "surname": "Ralchenko",
                     "position": "MSc",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "ralchenkos@gmail.com",
                     "linkedin": "",
@@ -436,7 +436,7 @@
                     "name": "Stanislav",
                     "surname": "Zubenko",
                     "position": "UnderGrad",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "dantistnfs@gmail.com",
                     "linkedin": "",
@@ -448,7 +448,7 @@
                     "name": "Vladyslav",
                     "surname": "Bondarenko",
                     "position": "BSc",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "vladyslav.bon@gmail.com",
                     "linkedin": "",
@@ -461,7 +461,7 @@
                     "name": "Name",
                     "surname": "Surname",
                     "position": "UnderGrad",
-                    "photo": "assets/img/team/team-3.jpg",
+                    "photo": "assets/img/team/avatar.jpg",
                     "twitter": "",
                     "email": "dantistnfs@gmail.com",
                     "linkedin": "",
