--- a/team.html
+++ b/team.html
@@ -88,15 +88,14 @@
     <section id="staff" class="team section-bg mt-5">
         <div class="container">
 
-            <div class="section-title" data-aos="fade-up">
+            <div class="section-title">
                 <h2>Staff</h2>
                 <p>Permanent members of the sysbio.ua</p>
             </div>
 
             <div class="row">
-
                 <div class="col-lg-2 col-md-4 d-flex align-items-stretch mx-auto" v-for="person in staff">
-                    <div class="member" data-aos="fade-up" data-aos-delay="3">
+                    <div class="member">
                         <div class="member-img">
                             <!--                            <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">-->
                             <img :src="person.photo" class="img-fluid " alt="">
@@ -108,11 +107,12 @@
                         </div>
                         <div class="member-info">
                             <h4><a href="team-details.html">{{person.name}} {{person.surname}}<a/></h4>
-                            <span>{{person.position}}</span>
+                            <span class="inline-position" style="white-space: pre;">{{person.position}}</span>
+                            <hr class="mb-0 mt-1"/>
+                            <span class="mt-1  fst-italic ">{{person.profile}}</span>
                         </div>
                     </div>
                 </div>
-
             </div>
 
         </div>
@@ -120,14 +120,14 @@
     <section id="phd" class="team section-bg mt-0 pt-0">
         <div class="container">
 
-            <div class="section-title" data-aos="fade-up">
+            <div class="section-title">
                 <h2>Students</h2>
                 <p>Future scientists who are developing in various fields of biology</p>
             </div>
 
             <div class="row">
                 <div class="col-lg-2 col-md-4 d-flex align-items-stretch mx-auto" v-for="person in stu">
-                    <div class="member" data-aos="fade-up" data-aos-delay="3">
+                    <div class="member">
                         <div class="member-img">
                             <img :src="person.photo" class="img-fluid " alt="">
                             <div class="social">
@@ -137,8 +137,10 @@
                             </div>
                         </div>
                         <div class="member-info">
-                            <h4>{{person.name}} {{person.surname}}</h4>
+                            <h4><a href="team-details.html">{{person.name}} {{person.surname}}<a/></h4>
                             <span>{{person.position}}</span>
+                            <hr class="mb-0 mt-1"/>
+                            <span class="mt-1  fst-italic ">{{person.profile}}</span>
                         </div>
                     </div>
                 </div>
@@ -150,7 +152,7 @@
             <div class="section-title">
                 <h2>Alumni</h2>
             </div>
-            <div class="row faq-item d-flex align-items-stretch mx-auto " data-aos="fade-up" data-aos-delay="1"
+            <div class="row faq-item d-flex align-items-stretch mx-auto "
                  v-for="person in alumni">
                 <div class="col-lg-2">
                     <!--                    <i class="ri-question-line"></i>-->
@@ -257,164 +259,154 @@
 
 </body>
 <script type="module">
-/*
-    import json from "./data/team.json" assert { type: "json" };
-   
     window.app = new Vue({
         el: '#main',
         data: {
-                staff: json.staff,
-                stu: json.stu,
-                alumni: json.alumni
-              }
-    }) 
-*/
-    window.app = new Vue({
-        el: '#main',
-        data: {
-    "staff": [
-        {
-            "name": "Olga",
-            "surname": "Martsenyuk",
-            "position": "Senior Researcher",
-            "photo": "assets/img/team/team-3.jpg",
-            "twitter": "",
-            "email": "o.p.martsenyuk@imbg.org.ua",
-            "linkedin": "",
-            "google_scholar": "",
-            "profile": "experimental molecular biology"
-        },
-        {
-            "name": "Oleksandr",
-            "surname": "Lykhenko",
-            "position": "Junior Research Fellow",
-            "photo": "assets/img/team/team-3.jpg",
-            "twitter": "",
-            "email": "lykhenko.olexandr@gmail.com",
-            "linkedin": "",
-            "google_scholar": "",
-            "profile": "proteomics, metabolic pathways modelling"
-        },
-        {
-            "name": "Maria",
-            "surname": "Obolenska",
-            "position": "Professor, Dr. Sci., Group Leader",
-            "photo": "assets/img/team/team-1.jpg",
-            "twitter": "",
-            "email": "m.obolenska@gmail.com",
-            "linkedin": "",
-            "google_scholar": "",
-            "profile": "computational and molecular biology"
-        },
-        {
-            "name": "Alina",
-            "surname": "Frolova",
-            "position": "Junior Research Fellow",
-            "photo": "assets/img/team/aln.png",
-            "twitter": "",
-            "email": "a.o.frolova@imbg.org.ua",
-            "linkedin": "",
-            "google_scholar": "",
-            "profile": "computational biology and bioinformatics"
-        },
-        {
-            "name": "Maria",
-            "surname": "Chabanova",
-            "position": "Technician",
-            "photo": "assets/img/team/team-3.jpg",
-            "twitter": "",
-            "email": "",
-            "linkedin": "",
-            "google_scholar": "",
-            "profile": "lab equipment"
+            "staff": [
+                {
+                    "name": "Olga",
+                    "surname": "Martsenyuk",
+                    "position": "Senior Researcher",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "o.p.martsenyuk@imbg.org.ua",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "experimental molecular biology"
+                },
+                {
+                    "name": "Oleksandr",
+                    "surname": "Lykhenko",
+                    "position": "Junior Research Fellow",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "lykhenko.olexandr@gmail.com",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "proteomics, metabolic pathways modelling"
+                },
+                {
+                    "name": "Maria",
+                    "surname": "Obolenska",
+                    "position": "Professor, Dr. Sci.,\n Group Leader",
+                    "photo": "assets/img/team/maria-obolenska.jpg",
+                    "twitter": "",
+                    "email": "m.obolenska@gmail.com",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "computational and molecular biology"
+                },
+                {
+                    "name": "Alina",
+                    "surname": "Frolova",
+                    "position": "Junior Research Fellow",
+                    "photo": "assets/img/team/alina-frolova.png",
+                    "twitter": "",
+                    "email": "a.o.frolova@imbg.org.ua",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "computational biology and bioinformatics"
+                },
+                {
+                    "name": "Maria",
+                    "surname": "Chabanova",
+                    "position": "Technician",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "lab equipment"
+                }
+            ],
+            "stu": [
+                {
+                    "name": "Artem",
+                    "surname": "Kicedzhi",
+                    "position": "Bachelor's student",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "molecular biology"
+                },
+                {
+                    "name": "Yurii",
+                    "surname": "Ryzhuk",
+                    "position": "Master's student",
+                    "photo": "assets/img/team/yurii-ryzhuk.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "molecular biology, data-mining"
+                },
+                {
+                    "name": "Stanislav",
+                    "surname": "Zubenko",
+                    "position": "PhD student",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "dantistnfs@gmail.com",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "molecular biology, data-mining"
+                },
+                {
+                    "name": "Dmytro",
+                    "surname": "Goryslavets",
+                    "position": "Master's student",
+                    "photo": "assets/img/team/dmytro-goryslavets.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "computational biology and bioinformatics"
+                },
+
+                {
+                    "name": "Anna",
+                    "surname": "Manko",
+                    "position": "Master's student",
+                    "photo": "assets/img/team/anna-manko.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "computational biology and bioinformatics"
+                },
+
+            ],
+            "alumni": [
+                {
+                    "name": "Ruslan",
+                    "surname": "Rodriguez",
+                    "position": "",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "molecular biology, data-mining",
+                    "graduation_year": 2021,
+                    "description": "Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non"
+                },
+                {
+                    "name": "Bogdan",
+                    "surname": "Tokovenko",
+                    "position": "",
+                    "photo": "assets/img/team/avatar.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "molecular biology, data-mining",
+                    "graduation_year": 2017,
+                    "description": "Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non"
+                }
+            ]
         }
-      ],
-      "stu": [
-          {
-              "name": "Stanislav",
-              "surname": "Zubenko",
-              "position": "PhD student",
-              "photo": "assets/img/team/team-3.jpg",
-              "twitter": "",
-              "email": "dantistnfs@gmail.com",
-              "linkedin": "",
-              "google_scholar": "",
-              "profile": "molecular biology, data-mining"
-          },
-          {
-              "name": "Yura",
-              "surname": "Ryzhuk",
-              "position": "Master's student",
-              "photo": "assets/img/team/team-3.jpg",
-              "twitter": "",
-              "email": "",
-              "linkedin": "",
-              "google_scholar": "",
-              "profile": "molecular biology, data-mining"
-          },
-          {
-              "name": "Dmytro",
-              "surname": "Goryslavets",
-              "position": "Master's student",
-              "photo": "assets/img/team/team-3.jpg",
-              "twitter": "",
-              "email": "",
-              "linkedin": "",
-              "google_scholar": "",
-              "profile": "computational biology and bioinformatics"
-          },
-          {
-             "name": "Anna",
-             "surname": "Manko",
-             "position": "Master's student",
-             "photo": "assets/img/team/team-3.jpg",
-             "twitter": "",
-             "email": "",
-             "linkedin": "",
-             "google_scholar": "",
-             "profile": "computational biology and bioinformatics"
-          },
-          {
-             "name": "Artem",
-             "surname": "Kicedzhi",
-             "position": "Bachelor's student",
-             "photo": "assets/img/team/team-3.jpg",
-             "twitter": "",
-             "email": "",
-             "linkedin": "",
-             "google_scholar": "",
-             "profile": "molecular biology"
-          }          
-      ],
-      "alumni": [
-          {
-               "name": "Ruslan",
-               "surname": "Rodriguez",
-               "position": "",
-               "photo": "assets/img/team/team-3.jpg",
-               "twitter": "",
-               "email": "",
-               "linkedin": "",
-               "google_scholar": "",
-               "profile": "molecular biology, data-mining",
-               "graduation_year": 2021,
-               "description": "Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non"
-          },
-          {
-               "name": "Bogdan",
-               "surname": "Tokovenko",
-               "position": "",
-               "photo": "assets/img/team/team-3.jpg",
-               "twitter": "",
-               "email": "",
-               "linkedin": "",
-               "google_scholar": "",
-               "profile": "molecular biology, data-mining",
-               "graduation_year": 2017,
-               "description": "Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non"
-          }
-      ]
-    }
     })
 </script>
 
