Added team photos, updated research directions and contacts.

--- a/contacts.html
+++ b/contacts.html
@@ -77,24 +77,27 @@
     <section id="contact" class="contact">
         <div class="container">
 
-            <div class="section-title" data-aos="fade-up">
+            <div class="section-title">
                 <h2>Contact Us</h2>
             </div>
 
             <div class="row">
 
-                <div class="col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="10">
+                <div class="col-lg-6 col-md-6">
                     <div class="contact-about">
                         <h3>sysbio</h3>
-                        <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus.
-                            Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc
-                            congue.</p>
+                        <p>
+                            We are happy to answer any questions about our research projects or any kind of inquiries
+                            regarding potential collaboration. <br/>
+                            Please, do specify the <span>Subject of your Message</span>, otherwise it will end up in spam.
+                            Alternatively, you may directly write us to the email address listed below.
+                        </p>
 
                     </div>
                 </div>
 
 
-                <div class="col-lg-6 col-md-12" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-6 col-md-12">
                     <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="form-group">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
@@ -154,7 +157,7 @@
                 <div class="info">
                     <div>
                         <i class="ri-map-pin-line"></i>
-                        <p>150, Academician Zabolotny street<br/> Kyiv, Ukraine, 03680</p>
+                        <p>150, Academik Zabolotny street<br/> Kyiv, Ukraine, 03680</p>
                     </div>
 
                     <div>
