--- a/opportunities.html
+++ b/opportunities.html
@@ -77,12 +77,12 @@
     <section id="about" class="about ">
         <div class="container">
 
-            <div class="section-title" data-aos="fade-up">
+            <div class="section-title" >
                 <h2>Opportunities for PhDs</h2>
             </div>
 
             <div class="row content">
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+                <div class="col-lg-6" >
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore
@@ -98,7 +98,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-6 pt-4 pt-lg-0">
                     <p>
                         Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                         in voluptate
@@ -115,12 +115,12 @@
     <section id="for-students" class="about ">
         <div class="container">
 
-            <div class="section-title" data-aos="fade-up">
+            <div class="section-title">
                 <h2>Opportunities for students</h2>
             </div>
 
             <div class="row content">
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+                <div class="col-lg-6">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore
@@ -136,7 +136,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-6 pt-4 pt-lg-0">
                     <p>
                         Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                         in voluptate
@@ -184,7 +184,7 @@
                         <p>
                             <a href="http://imbg.org.ua/uk/dept/enzymology/lab_sysbiol/">Institute of Molecular Biology
                                 and Genetics</a>,
-                            </br> 150, Academician Zabolotny street,<br/> Kyiv, Ukraine, 03680</p>
+                            </br>  150, Zabolotnoho str., Kyiv, Ukraine, 03143 </p>
                     </div>
 
                     <div>
