--- a/research.html
+++ b/research.html
@@ -79,68 +79,49 @@
 
             <div class="section-title">
                 <h2>Research directions</h2>
+
+            </div>
+            <div class="row content">
+                <p>
+                    Our research area includes following topics:
+                </p>
             </div>
 
-            <div class="row content">
-                <div class="col-lg-6">
-                    <p>
-                        Our research area includes following topics:
-                    </p>
-                    <ul>
-                        <li><i class="ri-check-double-line"></i> Systems biology and
-                            bioinformatics: whole genome search
-                            for target genes of transcription factors; reconstruction of gene regulatory networks.
-                            Theoretical predictions and experimental corroborations.
-                        </li>
-                        <li><i class="ri-check-double-line"></i> Gene expression and its regulation
-                            in eukaryotic cells
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-6 pt-4 pt-lg-0">
-                    <p>
-                        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate
-                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-            </div>
             <div class="row services mt-5">
-                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                    <div class="icon-box">
-                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                        <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                        <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias
-                            excepturi</p>
-                    </div>
-                </div>
+
 
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                        <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                            dolore</p>
+                        <h4 class="title"><a href="">Transcriptomics</a></h4>
+                        <p class="description">studying human organ systems in health and disease with classical
+                            molecular biology techniques as well as high-throughout methods</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4 class="title"><a href="">Magni Dolores</a></h4>
-                        <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia</p>
+                        <h4 class="title"><a href="">Bioinformatics</a></h4>
+                        <p class="description">integrative analysis of multi-omics data, gene regulatory networks
+                            reconstruction, GRID and Cloud computing in biosciences</p>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4 class="title"><a href="">Nemo Enim</a></h4>
-                        <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                            blanditiis</p>
+                        <h4 class="title-smaller title"><a href="">Environmental metagenomics</a></h4>
+                        <p class="description">biodiversity of built environment (mass transit systems, hospitals,
+                            universities, offices, and schools), AMR detection, whole-genome sequencing</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                        <h4 class="title"><a href="">Proteomics</a></h4>
+                        <p class="description">high-throughput mass-spectrometry</p>
                     </div>
                 </div>
 
@@ -244,7 +225,7 @@
                         <p>
                             <a href="http://imbg.org.ua/uk/dept/enzymology/lab_sysbiol/">Institute of Molecular Biology
                                 and Genetics</a>,
-                            </br> 150, Academician Zabolotny street,<br/> Kyiv, Ukraine, 03680</p>
+                            </br>  150, Zabolotnoho str., Kyiv, Ukraine, 03143 </p>
                     </div>
 
                     <div>
