--- a/team-details.html
+++ b/team-details.html
@@ -282,7 +282,7 @@
                         <p>
                             <a href="http://imbg.org.ua/uk/dept/enzymology/lab_sysbiol/">Institute of Molecular Biology
                                 and Genetics</a>,
-                            </br> 150, Academician Zabolotny street,<br/> Kyiv, Ukraine, 03680</p>
+                            </br>  150, Zabolotnoho str., Kyiv, Ukraine, 03143 </p>
                     </div>
 
                     <div>
