--- a/team.html
+++ b/team.html
@@ -203,12 +203,12 @@
                         <p>
                             <a href="http://imbg.org.ua/uk/dept/enzymology/lab_sysbiol/">Institute of Molecular Biology
                                 and Genetics</a>,
-                            </br> 150, Academician Zabolotny street,<br/> Kyiv, Ukraine, 03680</p>
+                            </br> 150, Zabolotnoho str., Kyiv, Ukraine, 03143 </p>
                     </div>
 
                     <div>
                         <i class="ri-mail-send-line"></i>
-                        <p>admin@sysbio.org.ua</p>
+                            <p>admin@sysbio.org.ua</p>
                     </div>
 
                     <div>
@@ -267,7 +267,7 @@
                     "name": "Olga",
                     "surname": "Martsenyuk",
                     "position": "Senior Researcher",
-                    "photo": "assets/img/team/avatar.jpg",
+                    "photo": "assets/img/team/olga-martsenyuk.jpg",
                     "twitter": "",
                     "email": "o.p.martsenyuk@imbg.org.ua",
                     "linkedin": "",
@@ -278,7 +278,7 @@
                     "name": "Oleksandr",
                     "surname": "Lykhenko",
                     "position": "Junior Research Fellow",
-                    "photo": "assets/img/team/avatar.jpg",
+                    "photo": "assets/img/team/oleksandr-lykhenko.png",
                     "twitter": "",
                     "email": "lykhenko.olexandr@gmail.com",
                     "linkedin": "",
@@ -322,9 +322,9 @@
             "stu": [
                 {
                     "name": "Artem",
-                    "surname": "Kicedzhi",
+                    "surname": "Kichydzhy",
                     "position": "Bachelor's student",
-                    "photo": "assets/img/team/avatar.jpg",
+                    "photo": "assets/img/team/artem-kichydzhy.jpg",
                     "twitter": "",
                     "email": "",
                     "linkedin": "",
@@ -346,7 +346,7 @@
                     "name": "Stanislav",
                     "surname": "Zubenko",
                     "position": "PhD student",
-                    "photo": "assets/img/team/avatar.jpg",
+                    "photo": "assets/img/team/stanislav-zubenko.jpg",
                     "twitter": "",
                     "email": "dantistnfs@gmail.com",
                     "linkedin": "",
@@ -370,6 +370,17 @@
                     "surname": "Manko",
                     "position": "Master's student",
                     "photo": "assets/img/team/anna-manko.jpg",
+                    "twitter": "",
+                    "email": "",
+                    "linkedin": "",
+                    "google_scholar": "",
+                    "profile": "computational biology and bioinformatics"
+                },
+                                {
+                    "name": "Vadym",
+                    "surname": "Kovadlo",
+                    "position": "Master's student",
+                    "photo": "assets/img/team/vadym-kovadlo.jpg",
                     "twitter": "",
                     "email": "",
                     "linkedin": "",
